# pytest-tgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
pytest-tgen/: helper.py  pytest.ini  tgen.py
pytest-tgen/tests/: cpu_thermal_check_test.yaml  test_global_configs.yaml
tests/: tgen_test.py
