[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "Pytest-tgen"
version = "1.0.1"
authors = [
  { name="Sid Taymurian", email="Taymurian@gmail.com" },
]
description = "A Data-driven Pytest automated test generator"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ['pytest>=7.0']
keywords = ['python', 'pytest', 'automation', 'test']
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Pytest",
    "Operating System :: OS Independent",
#    "Operating System :: Unix",
#    "Operating System :: POSIX :: Linux",
#    "Operating System :: MacOS :: MacOS X",
#    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Code Generators"
]

[project.optional-dependencies]
# development dependency groups
dev = ['pytest>=7.0', 'twine>=4.0.2', 'wheel>=0.37']


[project.urls]
Homepage = "https://github.com/pypa/pytest-tgen"
Issues = "https://github.com/pypa/pytest-tgen/issues"
